fix hero bubble alignment

--- a/src/components/hero.scss
+++ b/src/components/hero.scss
@@ -26,7 +26,7 @@
 .herocaption {
   position: relative;
 
-  & div {
+  >div {
     position: relative;
     background-position: center center;
     background-repeat: no-repeat;
@@ -44,7 +44,18 @@
     @media only screen and (min-width: 992px) {
       padding: 75px;
       background-size: contain;
-      display: block;
+    }
+  }
+
+  .ctas {
+    .btn {
+      width: 100%;
+    }
+
+    @media only screen and (min-width: 576px) {
+      .btn {
+        width: auto;
+      }
     }
   }
 
